--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,8 @@
     -webkit-box-sizing: inherit;
     -moz-box-sizing: inherit;
     box-sizing: inherit;
+    transition: all 0.5s ease;
+
 }
 
 html {
@@ -108,7 +110,6 @@ p {
 }
 .nav__link {
     display: flex;
-
     justify-content: space-between;
     align-items: center;
 }
