--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,6 @@
     -webkit-box-sizing: inherit;
     -moz-box-sizing: inherit;
     box-sizing: inherit;
-    transition: all 0.5s ease;
-
 }
 
 html {
@@ -110,10 +108,13 @@ p {
 }
 .nav__link {
     display: flex;
+
     justify-content: space-between;
     align-items: center;
 }
 .nav__link li a {
+  text-decoration: none;
+color: #000;
     margin-left: 25px;
     padding: 0px 3px 1px 5px;
     text-align: center;
@@ -232,6 +233,7 @@ main {
 .full-screen__body {
     padding: 50px 15px 0px 15px;
     z-index: 2;
+  background-color:  #fce000;  
     display: flex;
     flex: 1 1 auto;
     justify-content: center;
@@ -254,13 +256,14 @@ main {
 }
 .full-screen__video {
     position: fixed;
-    top: 0;
+  	background-color:  #fce000;  
+  top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    z-index: 1;
-    opacity: 0.4;
+   
+    opacity: 0.5;
 }
 
 /* ________________________________ */
@@ -670,10 +673,13 @@ footer .footer-subscribe input {
     width: 90%;
 }
 
-footer button.right-rounded {
+footer input.right-rounded {
     position: absolute;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+   border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  
     background: #fce000;
     font-size: 16px;
     color: #000;
@@ -681,8 +687,10 @@ footer button.right-rounded {
     line-height: 1.5;
     cursor: pointer;
     border: none;
+ 
 
     right: 0;
+  width: 30%;
 }
 
 footer button.right-rounded:hover {
@@ -749,3 +757,4 @@ footer small {
 
 /* end: footer styles */
 /*---------end footer-----------------*/
+
